# minilm

./: .gitignore  1.txt  LICENSE  README.md  pyproject.toml  uv.toml
config/: config.json
config/dpo/: data_config.json  train_args.json
config/preprocess/: pipeline.job.yaml  sft.pipeline.job.yaml
config/pretrain/: data_config.json  deepspeed_zero2.json  deepspeed_zero3.json  diag_gen_prompts.json  eval_domains.json  train_args.json
config/sft/: data_config.json  diag_gen_prompts.example.json  diag_tool_json_prompts.example.json  eval_domains.json  train_args.json
data/: README.md
data/sft/: README.md
docs/: pretrain_code_review.md
scripts/: _train_resolve.sh  collect_tokenizer_corpus.sh  preprocess_pretrain.sh  preprocess_sft.sh  run_ddp.sh  run_deepspeed.sh  run_pretrain_1gpu.sh  run_pretrain_1node_multigpu.sh  run_pretrain_deepspeed.sh  run_pretrain_multinode_torchrun.sh  run_single_gpu.sh  to_arrow.py  train_tokenizer.sh
scripts/include/: swanlab_env.sh  train_stage.inc.sh
src/: main.py  test.py
src/config/: __init__.py  data_arguments.py  logging_config.py  model_config.py  train_config.py
src/constants/: system.py
src/dataset/: dpo_dataset.py  pre_train_dataset.py  sft_dataset.py
src/model/: __init__.py  attention.py  decode_layer.py  minilm_model_output.py  mlp.py  model.py  moe.py  moe_gate.py  rms_norm.py  rope_yarn.py  rotary_embedding.py
src/model_test/: eval_llm.py
src/preprocess/: __init__.py  basic_clean.py  deduplicate.py  job_config.py  run_preprocess.py  scoring.py  sft_conversation.py  shared_text.py  split_dataset.py  (+3 more)
(+65 files in other folders)
